--- a/wp-content/plugins/projectdoom/doom-app/assets/css/app.css
+++ b/wp-content/plugins/projectdoom/doom-app/assets/css/app.css
@@ -758,18 +758,21 @@ h3.page-title {
 }
 
 .product-insects.home-activity li {
-	margin-left:35px;
+	margin-left:15px;
+	margin-right:15px;
 	border:3px solid #666666;
 	text-transform: uppercase;
 	text-align: center;
 	position: relative;
 	display: inline-block;
 	margin-top:20px;
+    margin-bottom: 20px;
 }
 
-@media (max-width: 680px) {
+@media (max-width: 959px) {
 	.product-insects.home-activity li {
-		margin-left:10px;	
+		margin-left:5px;
+		margin-right:5px;
 	}
 	.product-insects.home-activity li p{
 		font-size: 10px;
@@ -780,14 +783,17 @@ h3.page-title {
 	margin-top:50px;text-align:left;font-size:35pt;
 }
 
-@media (max-width: 1280px) {
+@media (max-width: 959px) {
 	.home-copy-content {
 		position: relative;
 		top:-100px;
-		z-index: 1;
+		/* z-index: 1; */
 	}
 	.home-copy-content .page-title{
 		font-size:25pt !important;
+	}
+	.home-image {
+		z-index: -1;
 	}
 }
 
@@ -809,7 +815,7 @@ h3.page-title {
 }
 
 .product-insects.home-activity li:first-child {
-	margin-left:0;
+	/* margin-left:0; */
 }
 
 .product-insects.home-activity li i{
@@ -821,7 +827,10 @@ h3.page-title {
 	
 }
 .product-insects.home-activity li.icon-insect-fishmoth i{
-	left:0;
+	left:-6px;
+}
+.product-insects.home-activity li.icon-insect-mosquito i{
+	left:-2px;
 }
 .product-insects.home-activity li.icon-insect-fly i{
 	left:-5px;
@@ -867,7 +876,7 @@ h3.page-title {
 	border:3px solid #00833D;
 }
 .product-insects.home-activity li.active:hover i {
-	opacity:0.8;
+	/* opacity:0.8; */
 	color:#00833D;
 }
 .product-insects.home-activity li.active.stat:hover i {
@@ -958,7 +967,7 @@ h3.page-title {
 	height:80px;
 	color:#444;
 	font-size: 2.5em;
-	border:5px solid #444444;
+	border:3px solid #444444;
 	border-radius:50%;
 	margin: 20px auto;
 	margin-bottom:15px;
@@ -1139,7 +1148,7 @@ h3.page-title {
 }
 
 .profile-box {
-	border:5px solid #00833D;
+	border:3px solid #00833D;
 	/* padding:20px; */
 	padding:1.625em;
 	margin: 2em auto;
@@ -1351,7 +1360,7 @@ md-card md-card-content {
     left: 0;
     right: 0;
     bottom: 0;
-    border: 5px solid #00833D;
+    border: 3px solid #00833D;
     z-index: -1;
 }
 
