--- a/wp-content/plugins/projectdoom/doom-app/assets/css/app.css
+++ b/wp-content/plugins/projectdoom/doom-app/assets/css/app.css
@@ -179,7 +179,7 @@ body:after {
 
 .collapsible-item.open .body {
 	max-height: 100%;
-	z-index: 1;
+	z-index: 0;
 	
 }
 
@@ -334,7 +334,7 @@ md-nav-ink-bar {
 .app-dashboard {
 	position: relative;
 	/**/
-	min-height: 100vh;
+	min-height: 120vh;
 	/**/
 }
 
@@ -361,6 +361,7 @@ md-nav-ink-bar {
 .super-search-open #search-takeover .search-button,
 .page-404 #search-takeover .search-button,
 .page-about #search-takeover .search-button,
+.page-faq #search-takeover .search-button,
 .page-legal #search-takeover .search-button,
 .page-contact #search-takeover .search-button {
 	color:#ffffff;
@@ -617,8 +618,7 @@ h3.page-title {
 	border-radius: 50%;
 	width:50px;
 	height:50px;
-
-	margin-left: 10px;
+	/* margin-left: 10px; */
 
 	border:1px solid #00833D;
 	display: inline-block;
@@ -650,21 +650,23 @@ h3.page-title {
 
 .product-insects li:first-child,
 .insect-insects li:first-child {
-	margin-left:0;
+	/* margin-left:0; */
 }
 
 .insect-insects li,
 .product-insects li {
 	position: relative;
-	margin-left: 5px;
+	/* margin-left: 5px; */
 	display: inline-block;
 	/**/
 	border-radius: 50%;
+	
+	margin: 4px;
 
 	width:60px;
 	height:60px;
 
-	margin-left: 5px;
+	/* margin-left: 5px; */
 
 	border:1px solid #ff510b;
 	display: inline-block;
@@ -758,9 +760,9 @@ h3.page-title {
 }
 
 .product-insects.home-activity li {
-	margin-left:15px;
-	margin-right:15px;
-	border:3px solid #666666;
+	/* margin-left:10px;
+	margin-right:10px; */
+	border:1px solid #666666;
 	text-transform: uppercase;
 	text-align: center;
 	position: relative;
@@ -771,8 +773,8 @@ h3.page-title {
 
 @media (max-width: 959px) {
 	.product-insects.home-activity li {
-		margin-left:5px;
-		margin-right:5px;
+		/* margin-left:5px;
+		margin-right:5px; */
 	}
 	.product-insects.home-activity li p{
 		font-size: 10px;
@@ -798,7 +800,7 @@ h3.page-title {
 }
 
 .product-insects.home-activity li.active {
-	border:3px solid #ff510b;
+	border:1px solid #ff510b;
 	color: #ff510b;
 }
 .product-insects.home-activity li.active i{
@@ -806,7 +808,7 @@ h3.page-title {
 }
 
 .product-insects.home-activity li.active.stat {
-	border:3px solid #00833D;
+	border:1px solid #00833D;
 	background-color: #00833D;
 }
 
@@ -820,7 +822,7 @@ h3.page-title {
 
 .product-insects.home-activity li i{
 	left: 0;
-    top: 0;
+    top: -2px;
     display: block;
     color: #666;
     font-size: 40px;
@@ -873,7 +875,7 @@ h3.page-title {
 }
 
 .product-insects.home-activity li.active:hover {
-	border:3px solid #00833D;
+	border:1px solid #00833D;
 }
 .product-insects.home-activity li.active:hover i {
 	/* opacity:0.8; */
@@ -967,7 +969,7 @@ h3.page-title {
 	height:80px;
 	color:#444;
 	font-size: 2.5em;
-	border:3px solid #444444;
+	border:1px solid #444444;
 	border-radius:50%;
 	margin: 20px auto;
 	margin-bottom:15px;
