--- a/wp-content/plugins/projectdoom/doom-app/assets/css/custom.scss
+++ b/wp-content/plugins/projectdoom/doom-app/assets/css/custom.scss
@@ -15,6 +15,8 @@ $mobile-break: 959px;
   outline: none !important;
   box-shadow: none !important;
   // z-index: 0 !important;
+
+  @include flex-shrink(0);
 }
 
 .inline {
@@ -580,7 +582,7 @@ div[data-ui-carousel][single='true'] {
       display: block;
       position: absolute;
       z-index: 1;
-      top: 0;
+      top: 5px;
       right: 42px;
       cursor: pointer;
     }
