--- a/wp-content/plugins/projectdoom/doom-app/assets/css/ie.fix.css
+++ b/wp-content/plugins/projectdoom/doom-app/assets/css/ie.fix.css
@@ -54,7 +54,7 @@ div[data-ui-configurator] {
 #configurator .step-3.active {
     /* display: block; */
     /* width: 100%; */
-    /* display: flex; */
+    /* display: flex; */ 
 }
 /*
 .carousel-container .carousel .carousel-item-name,
@@ -66,7 +66,13 @@ div[data-ui-configurator] {
     width:300px;
     display: inline-block;
 }
-
+/** /
 .bg-box {
     width:300px;
 }
+/**/
+.carousel-container .carousel .list {
+   
+    width:100% !important; 
+}
+/**/
