--- a/wp-content/plugins/projectdoom/doom-app/assets/css/layout.fix.scss
+++ b/wp-content/plugins/projectdoom/doom-app/assets/css/layout.fix.scss
@@ -127,3 +127,24 @@
 .final-container {
     display: block;
 }
+
+.desktop-selector {
+    display: none;
+}
+.mobile-selector {
+    display: block !important;
+    .md-select-value {
+        width: 100%;
+    }
+    .md-select-icon {
+        position: absolute;
+        right: 0;
+    }
+}
+.content-scroll {
+    width: 1400px;
+    max-width: none;
+}
+.insect-selector {
+    display: inline-block;
+}
