--- a/wp-content/plugins/projectdoom/doom-app/assets/css/custom.scss
+++ b/wp-content/plugins/projectdoom/doom-app/assets/css/custom.scss
@@ -588,7 +588,7 @@ div[data-ui-carousel][single='true'] {
       left: 0;
     }
     .footer-control {
-      display: block;
+      display: none;
       position: absolute;
       z-index: 1;
       top: 5px;
