--- a/wp-content/plugins/projectdoom/doom-app/assets/css/layout.fix.scss
+++ b/wp-content/plugins/projectdoom/doom-app/assets/css/layout.fix.scss
@@ -37,38 +37,41 @@
     .flex-10 {
         width: 10%;
     }
-    .flex-gt-sm-100 {
-        width: 100%;
-    }
-    .flex-gt-sm-90 {
-        width: 90%;
-    }
-    .flex-gt-sm-80 {
-        width: 80%;
-    }
-    .flex-gt-sm-70 {
-        width: 70%;
-    }
-    .flex-gt-sm-60 {
-        width: 60%;
-    }
-    .flex-gt-sm-50 {
-        width: 50%;
-    }
-    .flex-gt-sm-40 {
-        width: 40%;
-    }
-    .flex-gt-sm-30 {
-        width: 30%;
-    }
-    .flex-gt-sm-25 {
-        width: 25%;
-    }
-    .flex-gt-sm-20 {
-        width: 20%;
-    }
-    .flex-gt-sm-10 {
-        width: 10%;
+
+    @media only screen and (min-width: 960px) {
+        .flex-gt-sm-100 {
+            width: 100%;
+        }
+        .flex-gt-sm-90 {
+            width: 90%;
+        }
+        .flex-gt-sm-80 {
+            width: 80%;
+        }
+        .flex-gt-sm-70 {
+            width: 70%;
+        }
+        .flex-gt-sm-60 {
+            width: 60%;
+        }
+        .flex-gt-sm-50 {
+            width: 50%;
+        }
+        .flex-gt-sm-40 {
+            width: 40%;
+        }
+        .flex-gt-sm-30 {
+            width: 30%;
+        }
+        .flex-gt-sm-25 {
+            width: 25%;
+        }
+        .flex-gt-sm-20 {
+            width: 20%;
+        }
+        .flex-gt-sm-10 {
+            width: 10%;
+        }
     }
 }
 @mixin layout-column {
@@ -99,7 +102,7 @@
 }
 
 .navigation-menu-logo {
-    width: 54%;
+    // width: 54%;
     text-align: center;
 }
 
@@ -146,5 +149,26 @@
     max-width: none;
 }
 .insect-selector {
+    display: inline-block;
+}
+
+.insect-insects li i, .product-insects li i {
+    padding: 10px 5px;
+}
+
+.super-menu-open,
+.page-about,
+.page-legal,
+.page-faq,
+.page-contact {
+    .animate-page-switch-container {
+        padding: 0 15px;
+    }
+}
+
+.profile-pin-descriptions p {
+    display: block;
+}
+.profile-pin-descriptions i {
     display: inline-block;
 }
