--- a/wp-content/plugins/projectdoom/doom-app/assets/css/app.css
+++ b/wp-content/plugins/projectdoom/doom-app/assets/css/app.css
@@ -1172,6 +1172,20 @@ h3.page-title {
 	box-sizing: border-box;
 }
 
+.profile-box-icon {
+	border: 3px solid;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+	padding: 10px;
+    font-size: 25px;
+}
+
+.profile-box-icon.icon-ant,
+.profile-box-icon.icon-pin {
+	padding: 8px 12px;
+}
+
 .page-profile-container .map-container {
 	position: relative;
 }
