--- a/wp-content/plugins/projectdoom/doom-app/assets/css/custom.scss
+++ b/wp-content/plugins/projectdoom/doom-app/assets/css/custom.scss
@@ -802,6 +802,10 @@ END slider style
         max-width: 100%;
       }
     }
+
+    .off {
+        position: absolute;
+    }
   }
   .step-1, .step-2, .step-3 {
     @include  transition(0.4s cubic-bezier(.25,.8,.25,1), opacity 0.1s);
@@ -1467,6 +1471,13 @@ END slider style
   * Configurator
   ***********************************************/
   #configurator {
+    .mobile-selector {
+      display: block !important;
+    }
+    .desktop-selector {
+      display: none !important;
+
+    }
     .step-1, .step-2, .step-3 {
       &.active {
         margin: 0;
